fix unable to view dashboard nav buttons on small devices + fix responsive issues on admin views

--- a/app/assets/stylesheets/app.utilities.scss
+++ b/app/assets/stylesheets/app.utilities.scss
@@ -172,6 +172,7 @@ p, .widget p {
 }
 .r-n { border-radius: 0 0 0 0; }
 
+.p-xs { padding: 5px;}
 .p-lg { padding: 30px; }
 .p-l { padding: 16px; }
 
